networking/main.tf
resource "aws_vpc" "this" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "${var.project_prefix}-${var.environment}-vpc"
    Environment = var.environment
  }
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "${var.project_prefix}-${var.environment}-igw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }
  tags = {
    Name = "${var.project_prefix}-${var.environment}-public-rt"
  }
}

# Subnet A
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.this.id
  cidr_block              = cidrsubnet(var.vpc_cidr, 8, 1) # Ej: 10.0.1.0/24
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_prefix}-${var.environment}-subnet-a"
  }
}

# Subnet B (Necesaria para Grupos de BD como RDS y Redshift)
resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.this.id
  cidr_block              = cidrsubnet(var.vpc_cidr, 8, 2) # Ej: 10.0.2.0/24
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_prefix}-${var.environment}-subnet-b"
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}

# Security Group Base
resource "aws_security_group" "db_sg" {
  name        = "${var.project_prefix}-${var.environment}-db-sg"
  description = "Security Group administrado por Terraform para BDs"
  vpc_id      = aws_vpc.this.id

  # Acceso estricto (PoLP)
  ingress {
    description = "Acceso a BD desde IP autorizada"
    from_port   = 5432
    to_port     = 5439
    protocol    = "tcp"
    cidr_blocks =["${var.my_ip}/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks =["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_prefix}-${var.environment}-db-sg"
  }
}
